<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/fragment_main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fio"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/fragment_main_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fio_2" />

    <TextView
        android:id="@+id/fragment_main_text2_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="25dp"/>
    <EditText
        android:id="@+id/fragment_main_edit2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/fragment_main_text3_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textSize="25dp" />
    <EditText
        android:id="@+id/fragment_main_edit3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/fragment_main_button"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:text="@string/dalee"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:src="@drawable/purple"/>

</LinearLayout>